js/js.translator/testData/incremental/invalidation/associatedObjectKey/lib1/Annotation3.1.kt
@file:OptIn(ExperimentalAssociatedObjects::class)

import kotlin.reflect.*

@AssociatedObjectKey
annotation class Annotation3(val kClass: KClass<out Any>)
